--- a/sass/layouts/_brand.scss
+++ b/sass/layouts/_brand.scss
@@ -51,6 +51,12 @@
                     width: 100%;
                     height: 100%;
                     position: relative;
+                    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+                    transition: transform 0.5s ease, box-shadow 0.5s ease;
+                    &:hover{
+                        transform: scale(1.05) rotate(2deg) translateY(-10px);
+                        box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
+                    }
                     
                 } 
             } 
