--- a/sass/layouts/_carousel.scss
+++ b/sass/layouts/_carousel.scss
@@ -65,3 +65,89 @@
         }
     }
 }
+
+
+@media (max-width: 1248px){
+    .carousel{
+        .carousel-inner{
+            .carousel-item{
+                .carousel-caption{
+                    h2{
+                        font-size: $text-3xl;
+                        line-height: 1;
+                    }
+                    .baner_text{
+                        display: none;
+                    }
+                }
+            }
+        }
+    }
+}
+
+@media (max-width: 990px){
+    .carousel{
+        .carousel-inner{
+            .carousel-item{
+                .carousel-caption{
+                    margin-top: 0;
+                    h2{
+                        font-size: $text-2xl;
+                        line-height: 1;
+                    }
+                    .baner_text{
+                            display: none; 
+                    }
+                }
+            }
+        }
+    }
+}
+
+@media (max-width: 768px){
+    .carousel{
+        .carousel-inner{
+            .carousel-item{
+                .carousel-caption{
+                    margin-top: 0;
+                    padding:10px 20px;
+                    h2{
+                        font-size: $text-base;
+                        line-height: 1;
+                    }
+                    .baner_text{
+                            display: none; 
+                    }
+                    .baner_button{
+                        margin-top: 10px;
+                        padding: 2px 5px;
+                    }
+                }
+            }
+        }
+    }
+}
+
+@media (max-width: 576px){
+    .carousel{
+        .carousel-inner{
+            .carousel-item{
+                .carousel-caption{
+                    margin-top: 0;
+                    padding:10px 20px;
+                    h2{
+                        font-size: $text-base;
+                        line-height: 1;
+                    }
+                    .baner_text{
+                            display: none; 
+                    }
+                    .baner_button{
+                        margin-top: 10px;
+                        padding: 2px 5px;
+                    }
+                }
+            }
+        }
+    }
+}
