--- a/sass/layouts/_deals.scss
+++ b/sass/layouts/_deals.scss
@@ -29,6 +29,7 @@
         text-align: center;
         img{
             background-color: $orange-100;
+            
         }
         .dealtext_link{
             padding: 20px;
@@ -52,10 +53,15 @@
                     justify-content: space-between;
                     flex-direction: column;
                     .swiper-slide-img{
+                        cursor: zoom-in;
                         height: 70%;
                         img{
                             width: 100%;
                             height: 100%;
+                            transition: all 0.5s;
+                            &:hover{
+                                transform: scale(1.1);
+                            }
                         }
                     }
                     .swiper-slide-text{
@@ -111,24 +117,154 @@
     .swiper-pagination{
         display: none;
     }
-//     .deal_button{
-//         left: 40%;
-//         position: absolute;
-//         z-index: 1;
-//         border-radius: 40px;
-//         background-color: $orange-100;
-//         padding: 1rem 3rem;
-//         transition: all 0.5s;
-//         margin-top: 20px;
-//         a{
-//         font-family: $font-family;
-//         color: $color;
-//         font-size: 20px;
-//         }
-//         &:hover{
-//             background-color: $yellow-100;
-//             a{
-//                 color: $black-100;
-//             }
-//         }}
+}
+
+@media (max-width: 990px) {
+    .deal_shoe {
+        padding: 80px 30px 35px;
+
+        .deal_title {
+            .titledeal {
+                font-size: $text-3xl;
+            }
+        }
+
+        .deal_content {
+            .swiper {
+                .swiper-wrapper {
+                    .swiper-slide {
+                        .swiper-slide-text {
+                            padding: 20px;
+
+                            .swiper_title {
+                                h5 {
+                                    font-size: $text-lg;
+                                }
+
+                                a {
+                                    width: 50px;
+                                    height: 50px;
+                                    line-height: 50px;
+
+                                    .fa-cart-shopping {
+                                        font-size: $text-lg;
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+
+/* For devices with width <= 768px */
+@media (max-width: 768px) {
+    .deal_shoe {
+        padding: 60px 20px 25px;
+
+        .deal_title {
+            .titledeal {
+                font-size: $text-2xl;
+            }
+        }
+        .deal_link{
+            gap: 10px;
+            align-items: center;
+            img{
+                width: 50%;
+                height: 50%;
+            }
+            .dealtext_link{
+                font-size: $text-base;
+            }
+        }
+
+        .deal_content {
+            .swiper {
+                .swiper-wrapper {
+                    .swiper-slide {
+                        .swiper-slide-text {
+                            padding: 15px;
+
+                            .swiper_title {
+                                gap: 5px;
+                                h5 {
+                                    font-size: $text-base;
+                                }
+
+                                a {
+                                    width: 45px;
+                                    height: 45px;
+                                    line-height: 45px;
+
+                                    .fa-cart-shopping {
+                                        font-size: $text-base;
+                                    }
+                                }
+                            }
+                            .star{
+                                .fa-star{
+                                    font-size: 10px;
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+
+/* For devices with width <= 576px */
+@media (max-width: 576px) {
+    .deal_shoe {
+        padding: 40px 10px 15px;
+
+        .deal_title {
+            .titledeal {
+                font-size: $text-xl;
+            }
+        }
+
+        .deal_content {
+            .swiper {
+                .swiper-wrapper {
+                    .swiper-slide {
+                        .swiper-slide-text {
+                            padding: 10px;
+
+                            .swiper_title {
+                                gap: 5px;
+                                flex-direction: column;
+                                align-items: center;
+
+                                h5 {
+                                    font-size: $text-sm;
+                                    text-align: center;
+                                }
+
+                                a {
+                                    width: 40px;
+                                    height: 40px;
+                                    line-height: 40px;
+                                    margin-top: 10px;
+
+                                    .fa-cart-shopping {
+                                        font-size: $text-sm;
+                                    }
+                                }
+                            }
+                            .star{
+                                .fa-star{
+                                    font-size: 10px;
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
 }
