--- a/sass/layouts/_footer.scss
+++ b/sass/layouts/_footer.scss
@@ -5,6 +5,7 @@ footer{
     font-size: 16px;
     .footer--sub{
         padding-top: 80px;
+        margin:0 80px;
         .footer_item1{
             p{
                 margin: 41px 0;
@@ -52,8 +53,7 @@ footer{
                     position: absolute;
                     background-color: $orange-100;
                     color: $color;
-                    right: 180px;
-                    width: 38px;
+                    right: 210px;                 width: 38px;
                     height: 38px;
                     border-radius: 8px;
                     transition: all 0.5s;
@@ -100,3 +100,225 @@ footer{
     }
 }
 }
+
+  // Responsive styles
+  @media (max-width: 1248px) {
+    footer {
+        padding: 0;
+        
+      .footer--sub .container-fluid .footer--text {
+        flex-direction: column;
+        align-items: center;
+  
+        .footer_item1{
+            width: 100%;
+            text-align: center;
+            
+        }
+        .footer_item2{
+            width: 100%;
+          text-align: center;
+          ul{
+            display: none;
+          }
+        }
+        .footer_item3 {
+          width: 100%;
+          text-align: center;
+          h6{
+            margin-left: 0;
+          }
+          
+         
+  
+          .about {
+            align-items: center;
+            .form-email {
+              .form-input-email {
+                margin-right: 0;
+                margin-bottom: 10px;
+                .form-control{
+                  margin-left: 250px;
+                }
+              }
+              .btnEmail{
+                right: 390px;
+                width: 38px;
+                height: 38px;
+              }
+            }
+            .socail-icon{
+                ul{
+                    padding-left: 0;
+                }
+                
+            }
+          }
+        }
+      }
+    }
+  }
+  @media (max-width: 990px) {
+    footer {
+        padding: 0;
+        
+      .footer--sub .container-fluid .footer--text {
+        flex-direction: column;
+        align-items: center;
+  
+        .footer_item1{
+            width: 100%;
+            text-align: center;
+            
+        }
+        .footer_item2{
+            width: 100%;
+          text-align: center;
+          ul{
+            display: none;
+          }
+        }
+        .footer_item3 {
+          width: 100%;
+          text-align: center;
+          h6{
+            margin-left: 0;
+          }
+          
+         
+  
+          .about {
+            align-items: center;
+            .form-email {
+              .form-input-email {
+                margin-right: 0;
+                margin-bottom: 10px;
+                .form-control{
+                  margin-left: 180px;
+                }
+              }
+              .btnEmail{
+                right: 285px;
+                width: 38px;
+                height: 38px;
+              }
+            }
+            .socail-icon{
+                ul{
+                    padding-left: 0;
+                }
+                
+            }
+          }
+        }
+      }
+    }
+  }
+  
+  @media (max-width: 768px) {
+    footer {
+        padding: 0;
+        
+      .footer--sub .container-fluid .footer--text {
+        flex-direction: column;
+        align-items: center;
+  
+        .footer_item1{
+            width: 100%;
+            text-align: center;
+            
+        }
+        .footer_item2{
+            width: 100%;
+          text-align: center;
+          ul{
+            display: none;
+          }
+        }
+        .footer_item3 {
+          width: 100%;
+          text-align: center;
+          h6{
+            margin-left: 0;
+          }
+          
+         
+  
+          .about {
+            align-items: center;
+            .form-email {
+              .form-input-email {
+                margin-right: 0;
+                margin-bottom: 10px;
+                .form-control{
+                  margin-left: 0;
+                }
+              }
+              .btnEmail{
+                right: 50px;
+                width: 38px;
+                height: 38px;
+              }
+            }
+            .socail-icon{
+                ul{
+                    padding-left: 0;
+                }
+                
+            }
+          }
+        }
+      }
+    }
+  }
+  
+  
+  @media (max-width: $breakpoint-sm) {
+    footer {
+        text-align: left;
+        padding: 0;
+      .footer--sub {
+        margin: 0 40px;
+        .container-fluid .footer--text {
+        .footer_item1,
+        .footer_item2,
+        .footer_item3 {
+        //   .list-before-icon img {
+        //     max-width: 60px;
+        //   }
+  
+          .categories,
+          .contact,
+          .about {
+            h6 {
+              font-size: 0.9rem;
+            }
+  
+            ul li a {
+              font-size: 0.8rem;
+            }
+          }
+  
+          .about {
+            .form-email {
+              .form-input-email input {
+                font-size: 0.8rem;
+                padding: 5px;
+              }
+  
+              .btnEmail{
+                right: 50px;
+                width: 32px;
+                height: 32px;
+                 i {
+                font-size: 0.9rem;
+              }
+            }
+            }
+          }
+        }
+      }
+    }
+    }
+  }
+  
