--- a/sass/layouts/_headertop.scss
+++ b/sass/layouts/_headertop.scss
@@ -60,44 +60,47 @@
         
     }
 };
-@media (max-width: $breakpoint-md) {
-    .content {
-        flex-direction: column;
-        align-items: center;
-
-        .header--left, .header--right {
-            padding: 0;
-            ul {
-                justify-content: center;
-                li {
-                    a {
-                        margin-right: 5px;
-                        width: 25px;
-                        height: 25px;
-                        line-height: 25px;
-                    }
-                }
-            }
-        }
+.header--top {
+    display: none;
+  
+    @media (min-width: $breakpoint-sm) {
+      display: block;
     }
-}
-
-@media (max-width: $breakpoint-sm) {
-    .content {
-        .header--left, .header--right {
-            ul {
-                li {
-                    a {
-                        margin-right: 3px;
-                        width: 20px;
-                        height: 20px;
-                        line-height: 20px;
-                        font-size: $text-sm;
-                    }
-                }
-            }
-        }
+  
+    @media (min-width: $breakpoint-md) {
+    
     }
-}
-
+  
+    @media (min-width: $breakpoint-lg) {
+      
+    }
+  
+  
+    .content {
+      display: flex;
+      justify-content: space-between;
+  
+      .header--left,
+      .header--right {
+        ul {
+          display: flex;
+          list-style: none;
+          margin: 0;
+          padding: 0;
+  
+          li {
+            margin-right: 10px;
+  
+            a {
+              text-decoration: none;
+  
+              i {
+                font-size: 1.2rem;
+              }
+            }
+          }
+        }
+      }
+    }
+  }
 
