--- a/sass/layouts/_pick.scss
+++ b/sass/layouts/_pick.scss
@@ -53,9 +53,14 @@
                     flex-direction: column;
                     .swiper-slide-img{
                         height: 70%;
+                        cursor: zoom-in;
                         img{
                             width: 100%;
                             height: 100%;
+                            transition: all 0.5s;
+                            &:hover{
+                                transform: scale(1.05);
+                            }
                         }
                     }
                     .swiper-slide-text{
@@ -132,9 +137,205 @@
             }
         }}
 }
-// // Hiển thị trên các thiết bị khác
-// @media (max-width:$breakpoint-lg) {
-//     .pick_shoe{
-//         padding: ;
-//     }
-// }
+
+@media (max-width: 1248px) {
+    .pick_shoe {
+        padding: 80px 30px 35px;
+
+        .pick_title {
+            .titlepick {
+                font-size: $text-3xl;
+            }
+        }
+
+        .pick_content {
+            .swiper {
+                .swiper-wrapper {
+                    .swiper-slide {
+                        .swiper-slide-text {
+                            padding: 20px;
+
+                            .swiper_title {
+                                h5 {
+                                    font-size: $text-lg;
+                                }
+
+                                a {
+                                    width: 50px;
+                                    height: 50px;
+                                    line-height: 50px;
+
+                                    .fa-cart-shopping {
+                                        font-size: $text-lg;
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        }
+        .pick_button{
+            left: 35%;
+            
+        }
+    }
+}
+
+
+@media (max-width: 990px) {
+    .pick_shoe {
+        padding: 80px 30px 35px;
+
+        .pick_title {
+            .titlepick {
+                font-size: $text-3xl;
+            }
+        }
+
+        .pick_content {
+            .swiper {
+                .swiper-wrapper {
+                    .swiper-slide {
+                        .swiper-slide-text {
+                            padding: 20px;
+
+                            .swiper_title {
+                                h5 {
+                                    font-size: $text-lg;
+                                }
+
+                                a {
+                                    width: 50px;
+                                    height: 50px;
+                                    line-height: 50px;
+
+                                    .fa-cart-shopping {
+                                        font-size: $text-lg;
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        }
+        .pick_button{
+            left: 30%;
+            margin-top: 10px;
+        }
+    }
+}
+
+/* For devices with width <= 768px */
+@media (max-width: 768px) {
+    .pick_shoe {
+        padding: 60px 20px 25px;
+
+        .pick_title {
+            .titlepick {
+                font-size: $text-2xl;
+            }
+        }
+
+        .pick_content {
+            .swiper {
+                .swiper-wrapper {
+                    .swiper-slide {
+                        .swiper-slide-text {
+                            padding: 15px;
+
+                            .swiper_title {
+                                gap: 5px;
+                                h5 {
+                                    font-size: $text-base;
+                                }
+
+                                a {
+                                    width: 45px;
+                                    height: 45px;
+                                    line-height: 45px;
+
+                                    .fa-cart-shopping {
+                                        font-size: $text-base;
+                                    }
+                                }
+                            }
+                            .star{
+                                .fa-star{
+                                    font-size: 10px;
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        }
+        .pick_button{
+            left: 18%;
+            padding: 8px 16px;
+            margin-top: 0;
+        }
+    }
+}
+
+/* For devices with width <= 576px */
+@media (max-width: 576px) {
+    .pick_shoe {
+        padding: 40px 10px 15px;
+
+        .pick_title {
+            .titlepick {
+                font-size: $text-xl;
+            }
+        }
+
+        .pick_content {
+            .swiper {
+                .swiper-wrapper {
+                    .swiper-slide {
+                        .swiper-slide-text {
+                            padding: 10px;
+
+                            .swiper_title {
+                                gap: 5px;
+                                flex-direction: column;
+                                align-items: center;
+
+                                h5 {
+                                    font-size: $text-sm;
+                                    text-align: center;
+                                }
+
+                                a {
+                                    width: 40px;
+                                    height: 40px;
+                                    line-height: 40px;
+                                    margin-top: 10px;
+
+                                    .fa-cart-shopping {
+                                        font-size: $text-sm;
+                                    }
+                                }
+                            }
+                            .star{
+                                .fa-star{
+                                    font-size: 10px;
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        }
+        .pick_button{
+            line-height: 8px;
+            left: 35%;
+            margin-top: 0;
+            padding: 3px 4px;
+            a{
+                font-size: 8px;
+            }
+        }
+    }
+}
