--- a/sass/layouts/_product.scss
+++ b/sass/layouts/_product.scss
@@ -80,6 +80,10 @@
                         height: 100%;
                         // hình ảnh bao phủ toàn bộ container và không bị méo 
                         object-fit: cover; 
+                        transition: all 0.5s;
+                        &:hover{
+                            transform: scale(1.2);
+                        }
                     }
                 }
             }
@@ -133,6 +137,10 @@
                         height: 100%;
                         // hình ảnh bao phủ toàn bộ container và không bị méo 
                         object-fit: cover; 
+                        transition: all 0.5s;
+                        &:hover{
+                            transform: scale(1.5);
+                        }
                     }
                 }
             }
