--- a/sass/layouts/_suggest.scss
+++ b/sass/layouts/_suggest.scss
@@ -1,226 +1,153 @@
-.question_shoe {
-    padding: 144px 40px 0;
-    display: flex;
-    justify-content: space-between;
-    gap: 20px;
+.suggest_shoe {
+    padding: 60px 40px 0;
 
-    .question_left {
-        width: 50%;
+    .suggest_top {
+        margin-bottom: 40px;
+        display: flex;
+        justify-content: space-between;
+        color: $black-100;
 
-        .question_title {
+        .suggest_title {
             h3 {
                 font-family: $font-family;
                 font-weight: $fw;
                 font-size: $text-5xl;
                 text-transform: capitalize;
                 color: $black-100;
-                margin-bottom: 50px;
             }
         }
 
-        .accordion-flush {
-
-            .accordion-item {
-                background-color: #F3F3F3;
-                border: 0;
-                border-radius: 20px;
-                padding: 2rem;
-                margin-bottom: 2rem;
-
-                h2 {
-                    button {
-                        background-color: #F3F3F3;
-                        font-family: $font-family;
-                        font-weight: $fw;
-                        font-size: $text-2xl;
-                        text-transform: capitalize;
-                        color: $black-100;
-                    }
-                }
-            }
-
-            .accordion-collapse {
-                .accordion-body {
-                    p {
-                        color: $black-100;
-                        font-size: $text-xl;
-                    }
-                }
-            }
-        }
-    }
-
-    .question_right {
-        width: 50%;
-
-        .question_img {
-            position: relative;
+        .suggest_navbar {
             display: flex;
             justify-content: center;
-            align-items: center;
-            // Để hình ảnh không tràn ra ngoài border 
-            overflow: hidden;
+            gap: 20px;
+            cursor: pointer;
 
-            .img_queston {
-                width: 70%;
-                height: auto;
+            .all_shoe_button {
+                display: none;
+                font-family: $font-family;
+                font-weight: 400;
+                font-size: $text-2xl;
+                color: $color;
+                text-transform: capitalize;
+                padding: 14px 40px;
+                border: 1px solid $orange-100;
+                border-radius: 30px;
+                background-color: $yellow-100;
+                cursor: pointer;
+                transition: all 0.5s;
+
+                &:hover {
+                    border: 1px solid $yellow-100;
+                    background-color: $orange-100;
+                    color: $black-100;
+                }
             }
 
-            // .ripple-container {
-            //     position: relative;
-            //     display: inline-block;
-            //     overflow: hidden;
-            //     border-radius: 50%;
-            //     &::before{
-            //         content: "";
-            //         position: absolute;
-            //         top: 50%;
-            //         left: 50%;
-            //         width: 200%;
-            //         height: 200%;
-            //         background: rgba(255, 255, 255, 0.4);
-            //         border-radius: 50%;
-            //         transform: scale(0);
-            //         transition: transform 0.5s ease, opacity 0.5s ease;
-            //         opacity: 0;
-            //         pointer-events: none;
-            //     }
-            //     &:hover{
-            //         .icon_question{
-            //             transform: scale(1.1);
-            //         }
-            //         &::before{
-            //             transform: scale(1);
-            //             opacity: 1;
-            //         }
-            //     }
-            // }
-            .icon_question {
-                position: absolute;
-                bottom: 30%;
-                left: 50%;
-                transform: translate(-50%, -50%);
-                background: rgba(255, 255, 255, 0);
-                color: white;
-                padding: 10px 20px;
-                // border-radius: 10px;
-                text-align: center;
+            .navbar_links {
+                display: flex;
+                gap: 20px;
+
+                .navbar_link {
+                    font-family: $font-family;
+                    font-weight: $fw;
+                    font-size: $text-2xl;
+                    color: $black-100;
+                    text-transform: capitalize;
+                    padding: 0.8rem 2.5rem;
+                    border: 1px solid $orange-100;
+                    font-weight: $fw;
+                    border-radius: 30px;
+                    transition: all 0.5s;
+
+                    &:hover {
+                        border: 1px solid $yellow-100;
+                        color: $orange-100;
+                    }
+                }
+            }
+
+            .active {
+                color: $orange-100;
+                border: 1px solid $yellow-100;
             }
         }
     }
-}
 
+    .suggest_bottom {
+        cursor: pointer;
+        display: grid;
+        grid-template-columns: repeat(5, 1fr);
+        gap: 20px;
+        padding: 10px;
 
-@media (max-width: 1248px) {
-    .question_shoe {
-        // flex-direction: column;
-        align-items: center;
-        text-align: center;
-        padding: 100px 50px 0;
+        .suggest_product {
+            .suggest_item {
+                box-shadow: rgba(17, 17, 26, 0.1) 0px 4px 16px, rgba(17, 17, 26, 0.1) 0px 8px 24px, rgba(17, 17, 26, 0.1) 0px 16px 56px;
+                padding: 10px;
+                background: #fff;
+                border-radius: 8px;
+                transition: all 0.5s;
 
-        .question_left {
-            width: 100%;
-        }
-
-        .question_right {
-            width: 100%;
-            padding-top: 50px;
-
-            .question_img {
-                .img_queston {
-                    width: 95%;
-                    height: auto;
+                &:hover {
+                    .suggest_icon {
+                        bottom: 0;
+                    }
                 }
-            }
-        }
-    }
-}
 
-@media (max-width: 990px) {
-    .question_shoe {
-        // flex-direction: column;
-        align-items: center;
-        text-align: center;
-        padding: 100px 50px 0;
+                .suggest_img {
+                    position: relative;
+                    overflow: hidden;
+                    z-index: 1;
 
-        .question_left {
-            width: 100%;
+                    img {
+                        width: 100%;
+                        border-radius: 8px 8px 0 0;
+                        transition: all 0.5s;
 
-            .question_title {
-                h3 {
-                    font-size: 35px;
-                    margin-bottom: 30px;
-                }
-            }
-
-            .accordion-flush {
-                .accordion-item {
-                    padding: 16px;
-                    margin-bottom: 16px;
-                }
-            }
-        }
-
-        .question_right {
-            width: 100%;
-            padding-top: 50px;
-
-            .question_img {
-                .img_queston {
-                    width: 95%;
-                    height: auto;
-                }
-            }
-        }
-    }
-}
-
-@media (max-width: 768px) {
-    .question_shoe {
-        // flex-direction: column;
-        align-items: center;
-        text-align: center;
-        padding: 60px 15px 0;
-
-        .question_left {
-            width: 100%;
-
-            .question_title {
-                h3 {
-                    font-size: 20px;
-                    margin-bottom: 10px;
-                }
-            }
-
-            .accordion-flush {
-                .accordion-item {
-                    padding: 8px;
-                    margin-bottom: 8px;
-
-                    h2 {
-                        button {
-                            font-size: 10px;
+                        &:hover {
+                            transform: scale(1.1) rotate(10deg) translate(10px, 10px) skew(5deg, 5deg);
                         }
                     }
                 }
-            }
-        }
 
-        .question_right {
-            width: 100%;
-            padding-top: 20px;
+                .suggest_icon {
+                    position: absolute;
+                    bottom: -227px;
+                    margin: 0;
+                    background: rgb(8 8 8 / 0);
+                    padding: 20px 0;
+                    width: 100%;
+                    text-align: center;
+                    transition: all 0.5s;
 
-            .question_img {
-                .img_queston {
-                    width: 95%;
-                    height: auto;
+                    .suggest_icon_design {
+                        width: 40px;
+                        height: 40px;
+                        border-radius: 50%;
+                        line-height: 40px;
+                        background: $orange-100;
+                        display: inline-block;
+                        margin-left: 10px;
+
+                        .fa-cart-shopping {
+                            color: $color;
+                        }
+                    }
                 }
 
-                .icon_question {
-                    top: 50%;
-                    bottom: 0;
-                    width: 80%;
-                    height: auto;
+                .suggest_text {
+                    padding: 20px;
+                    text-transform: capitalize;
+
+                    .suggest_text_name {
+                        color: $black-100;
+                        transition: all 0.5s;
+
+                        &:hover {
+                            color: $yellow-100;
+                        }
+                    }
                 }
             }
         }
@@ -228,94 +155,110 @@
 }
 
 // Media queries for responsiveness
-// @media (max-width: 1248px) {
-//     .question_shoe {
-//         // flex-direction: column;
-//         align-items: center;
-//         text-align: center;
-//         padding: 100px 50px 0;
-//         .question_left{
-//             width: 100%;
-//             // .accordion-flush{
-//             //     .accordion-item{
-//             //         padding: 16px;
-//             //         margin-bottom: 5px;
-//             //     }
-//             // }
-//         }
-//         .question_right {
-//             width: 100%;
-//             padding-top: 100px;
-//         }
+@media (max-width: 1248px) {
+    .suggest_shoe .suggest_top {
+        flex-direction: column;
+        align-items: flex-start;
+        text-align: left;
 
-//         .question_img {
-//             .img_queston {
-//                 width: 80%;
-//             }
-//         }
-//     }
-// }
+        .suggest_navbar {
+            margin-top: 20px;
+        }
+    }
 
-// @media (max-width: 990px) {
-//     .question_shoe {
-//         padding: 80px 20px 0;
+    .suggest_shoe .suggest_bottom {
+        grid-template-columns: repeat(4, 1fr);
+    }
+}
 
-//         .question_img {
-//             .img_queston {
-//                 width: 85%;
-//             }
-//         }
-//     }
-// }
+@media (max-width: 990px) {
+    .suggest_shoe .suggest_top {
+        .suggest_navbar {
+            flex-wrap: wrap;
+            gap: 10px;
+        }
+    }
 
-// @media (max-width: 768px) {
-//     .question_shoe {
-//         padding: 60px 15px 0;
+    .suggest_shoe .suggest_bottom {
+        grid-template-columns: repeat(3, 1fr);
+    }
+}
 
-//         .question_left .question_title h3 {
-//             font-size: $text-4xl;
-//         }
+@media (max-width: 768px) {
+    .suggest_shoe .suggest_top {
+        align-items: center;
 
-//         .accordion-flush {
-//             .accordion-item {
-//                 padding: 1.5rem;
-//             }
+        .suggest_title h3 {
+            font-size: $text-3xl;
+        }
 
-//             .accordion-collapse .accordion-body p {
-//                 font-size: $text-lg;
-//             }
-//         }
+        .suggest_navbar {
+            flex-direction: column;
+            align-items: center;
+            gap: 10px;
 
-//         .question_img {
-//             .img_queston {
-//                 width: 90%;
-//             }
-//         }
-//     }
-// }
+            .all_shoe_button {
+                display: block;
+            }
 
-// @media (max-width: 576px) {
-//     .question_shoe {
-//         padding: 40px 10px 0;
+            .navbar_links {
+                display: none;
+                flex-direction: column;
+                align-items: center;
+                gap: 10px;
+                position: absolute;
+                top: 100%;
+                left: 0;
+                right: 0;
+                background-color: #fff;
+                border: 1px solid $orange-100;
+                border-radius: 10px;
+                padding: 10px;
+                z-index: 10;
 
-//         .question_left .question_title h3 {
-//             font-size: $text-3xl;
-//         }
+                .navbar_link {
+                    padding: 0.5rem 1.5rem;
+                    font-size: $text-xl;
+                }
+            }
 
-//         .accordion-flush {
-//             .accordion-item {
-//                 padding: 1rem;
-//             }
+            .active {
+                display: none;
+            }
+        }
+    }
 
-//             .accordion-collapse .accordion-body p {
-//                 font-size: $text-md;
-//             }
-//         }
+    .suggest_shoe .suggest_bottom {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
 
-//         .question_img {
-//             .img_queston {
-//                 width: 100%;
-//             }
-//         }
-//     }
-// }
+@media (max-width: 576px) {
+    .suggest_shoe {
+        padding: 20px 10px 0;
+    }
+
+    .suggest_shoe .suggest_top {
+        align-items: center;
+        text-align: center;
+
+        .suggest_title h3 {
+            font-size: $text-2xl;
+        }
+
+        .suggest_navbar {
+            flex-direction: column;
+            align-items: center;
+            gap: 10px;
+
+            .navbar_link {
+                padding: 0.5rem 1.5rem;
+                font-size: $text-lg;
+            }
+        }
+    }
+
+    .suggest_shoe .suggest_bottom {
+        grid-template-columns: 1fr;
+    }
+}
