--- a/sass/layouts/_headertop.scss
+++ b/sass/layouts/_headertop.scss
@@ -1,5 +1,5 @@
 .header--top {
-    background-color: $blue-100;
+    background-color: $grey-300;
     padding: 11px;
     align-content: center;
 
