--- a/view/pages/contact.html
+++ b/view/pages/contact.html
@@ -50,9 +50,6 @@
             </a>
           </li>
           <li>
-            <a href="#">Login</a>
-          </li>
-          <li>
             <a href="../auth/register.html">Register</a>
           </li>
         </ul>
@@ -132,8 +129,8 @@
   <section class="cta pd-60">
     <div class="container-fluid custom-fluid">
       <div class="row d-flex align-items-center justify-content-between">
-        <div class="col-xl-6">
-          <div class="cta_form">
+        <div class=" col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
+          <div class="cta_form mb-3">
             <h2 class="mb-5">Contact Us</h2>
             <form id="frmContact">
               <div class="mb-3">
@@ -155,8 +152,8 @@
             </form>
           </div>
         </div>
-        <div class="col-xl-6">
-          <div class="cta_img">
+        <div class=" col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
+          <div class="cta_img mb-3">
             <img src="../../image/img096.png" alt="err" />
           </div>
         </div>
@@ -180,8 +177,8 @@
         </div>
       </div>
       <div class="row pt-5">
-        <div class="col-xl-4">
-          <div class="bg-orange">
+        <div class=" col-12 col-sm-12 col-md-6 col-lg-4 col-xl-4">
+          <div class="bg-orange mb-3">
             <div class="info_item d-flex align-items-center">
               <i class="fa-solid fa-location-dot"></i>
               <p>No: 58 A, East Madison Street, Baltimore, MD, USA 4508</p>
@@ -196,8 +193,8 @@
             </div>
           </div>
         </div>
-        <div class="col-xl-4">
-          <div class="bg-orange">
+        <div class=" col-12 col-sm-12 col-md-6 col-lg-4 col-xl-4">
+          <div class="bg-orange mb-3">
             <div class="info_item d-flex align-items-center">
               <i class="fa-solid fa-location-dot"></i>
               <p>No: 58 A, East Madison Street, Baltimore, MD, USA 4508</p>
@@ -212,8 +209,8 @@
             </div>
           </div>
         </div>
-        <div class="col-xl-4">
-          <div class="bg-orange">
+        <div class=" col-12 col-sm-12 col-md-6 col-lg-4 col-xl-4">
+          <div class="bg-orange mb-3">
             <div class="info_item d-flex align-items-center">
               <i class="fa-solid fa-location-dot"></i>
               <p>No: 58 A, East Madison Street, Baltimore, MD, USA 4508</p>
