--- a/sass/layouts/_detailproduct.scss
+++ b/sass/layouts/_detailproduct.scss
@@ -1,5 +1,5 @@
 .detail_product {
-    padding: 100px 40px 45px;
+    padding: 100px 0 45px;
     display: flex;
     justify-content: space-between;
     gap: 40px;
@@ -14,8 +14,9 @@
 
         img {
             position: relative;
-            width: 700px;
-            height: 700px;
+            // width: 700px;
+            // height: 700px;
+            width: 100%;
             transition: all 0.5s;
 
             &:hover {
@@ -158,7 +159,7 @@
                 margin: 10px 5px 10px 0;
                 transition: all 0.5s;
 
-                &:hover {
+                &:hover, &:active, &:visited {
                     background-color: $black-100;
                     color: $color;
                 }
@@ -234,20 +235,24 @@
 
             .addToCart {
                 .btnAddToCart {
-                    width: 496px;
+                    width: 230px;
                     background-color: $color;
                     border: 2px solid #f0f0f0;
                     cursor: pointer;
                     border-radius: 40px;
-                    padding: 5px;
+                    padding: 7px 12px;
                     color: $black-100;
                     text-transform: capitalize;
                     font-family: $font-family;
-                    font-size: $text-2xl;
+                    font-size: $text-xl;
                     text-align: center;
+                    transition: all 0.5s;
 
                     &:hover {
                         background-color: $yellow-100;
+                    }
+                    i{
+                       margin-right: 7px;
                     }
                 }
             }
@@ -258,7 +263,7 @@
             margin-top: 20px;
 
             .btnBuy {
-                width: 100%;
+                width: 50%;
                 background-color: $orange-100;
                 border: 2px solid #f0f0f0;
                 cursor: pointer;
@@ -269,6 +274,7 @@
                 font-family: $font-family;
                 font-size: $text-2xl;
                 text-align: center;
+                transition: all 0.5s;
 
                 &:hover {
                     background-color: $yellow-100;
