--- a/sass/layouts/_footer.scss
+++ b/sass/layouts/_footer.scss
@@ -167,7 +167,7 @@ footer {
             }
 
             .btnEmail {
-              right: 390px;
+              right: 283px;
               width: 38px;
               height: 38px;
             }
@@ -232,7 +232,7 @@ footer {
             }
 
             .btnEmail {
-              right: 285px;
+              right: 198px;
               width: 38px;
               height: 38px;
             }
@@ -287,6 +287,7 @@ footer {
           align-items: center;
 
           .form-email {
+            justify-content: center;
             .form-input-email {
               margin-right: 0;
               margin-bottom: 10px;
@@ -297,7 +298,7 @@ footer {
             }
 
             .btnEmail {
-              right: 50px;
+              right: 217px;
               width: 38px;
               height: 38px;
             }
@@ -306,6 +307,7 @@ footer {
           .socail-icon {
             ul {
               padding-left: 0;
+              justify-content: center;
             }
 
           }
