--- a/view/pages/detail.html
+++ b/view/pages/detail.html
@@ -21,12 +21,6 @@
     <!-- SWIPER CSS  -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
 
-    <!-- (Optional) Use CSS or JS implementation -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/js/all.min.js"
-        integrity="sha512-naukR7I+Nk6gp7p5TMA4ycgfxaZBJ7MO5iC3Fp6ySQyKFHOGfpkSZkYVWV5R7u7cfAicxanwYQ5D1e17EfJcMA=="
-        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-
-
     <!-- Bootstrap CSS v5.2.1 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
@@ -61,9 +55,6 @@
                         <a href="#">
                             <i class="fa-solid fa-cart-shopping"></i>
                         </a>
-                    </li>
-                    <li>
-                        <a href="#">Login</a>
                     </li>
                     <li>
                         <a href="../auth/register.html">Register</a>
@@ -145,79 +136,13 @@
 
     </section>
     <!-- DETAIL SHOE  -->
-    <div class="detail_product" id="detail_shoe">
-        <div class="product_left">
-            <img src="../../image/img021.jpg" alt="">
-            <div class="product_img">
-                <div class="product_item">
-                    <img src="../../image/img021.jpg" alt="">
-                </div>
-                <div class="product_item">
-                    <img src="../../image/img021.jpg" alt="">
-                </div>
-                <div class="product_item">
-                    <img src="../../image/img021.jpg" alt="">
-                </div>
-                <div class="product_item">
-                    <img src="../../image/img021.jpg" alt="">
-                </div>
-                <div class="product_item">
-                    <img src="../../image/img021.jpg" alt="">
-                </div>
-                <div class="product_item">
-                    <img src="../../image/img021.jpg" alt="">
-                </div>
-                <div class="product_item">
-                    <img src="../../image/img021.jpg" alt="">
-                </div>
-            </div>
-        </div>
-        <div class="product_right">
-            <h2 class="product_right_title">sandaun casual hiking shoes</h2>
-            <p class="describe">Nunc vehicula quam semper odio varius tincidunt. Vestibulum ante ipsum primis in
-                faucibus orci luctus et
-                ultrices posue.</p>
-            <p class="price">Rs. 53.00</p>
-            <p class="vendor">Vendor: Ally</p>
-            <p class="product_type">Product type: Casual Shoe</p>
-            <p class="stock">32 in stock</p>
-            <p class="color">color: Black</p>
-            <div class="select_color">
-                <button id="black" title="black" class="btn-color btn-black"></button>
-                <button id="green" title="green" class="btn-color btn-green"></button>
-                <button id="blue" title="blue" class="btn-color btn-blue"></button>
-                <button id="red" title="red" class="btn-color btn-red"></button>
-                <button id="gray" title="gray" class="btn-color btn-gray"></button>
-            </div>
-            <p class="material">Outer Material: Rubber</p>
-            <div class="outer_material">
-                <div class="material  active" id="rubber">Rubber</div>
-                <div class="material" id="wedge">Wedge</div>
-                <div class="material" id="leather">Leather</div>
-                <div class="material" id="synthetic">Synthetic</div>
-            </div>
-            <p class="size">Size: 32</p>
-            <div class="select_size">
-                <div class="size_item  active" id="32">32</div>
-                <div class="size_item" id="33">33</div>
-                <div class="size_item" id="34">34</div>
-                <div class="size_item" id="35">35</div>
-            </div>
-            <div class="btnSelect">
-                <div class="btn_quantity">
-                    <button class="btnTru" title="btnTru"> - </button>
-                    <span>1</span>
-                    <button class="btnCong" title="btnCong"> + </button>
-                </div>
-                <div class="addToCart">
-                    <button class="btnAddToCart">add to cart</button>
-                </div>
-            </div>
-            <div class="btn_Buy">
-                <button class="btnBuy">buy it now</button>
+    <div class="container" style="max-width: 1320px">
+        <div class="row">
+            <div class="detail_product" id="detail_shoe">
             </div>
         </div>
     </div>
+
     <!-- RECOMMENDED PRODUCTS -->
     <div class="product_shoe">
         <div class="product_title">
