Fix responsive some block + Optimize data show

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -21,3 +21,4 @@
 @import './layouts/backtotop';
 @import './layouts/register';
 @import './layouts/contact';
+@import './layouts//_handleresponsive.scss';
