--- a/view/auth/register.html
+++ b/view/auth/register.html
@@ -241,7 +241,8 @@
               </h6>
               <div class="form-email d-flex">
                 <form class="form-input-email">
-                  <input type="email" name="Email" id="email" placeholder="Enter your email" class="form-control" />
+                  <input type="email" name="Email" id="emailFooter" placeholder="Enter your email"
+                    class="form-control" />
                 </form>
                 <button type="submit" class="btnEmail" title="submitButton">
                   <i class="fa-regular fa-paper-plane"></i>
