--- a/css/style.css
+++ b/css/style.css
@@ -2969,4 +2969,38 @@ body .cd-top--fade-out {
 
 .ShoeMap .col-xl-12 {
   padding: 0 20px;
+}
+
+@media screen and (max-width: 1025px) {
+  .suggest_shoe .suggest_bottom {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+@media screen and (max-width: 821px) {
+  .suggest_shoe .suggest_bottom {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+@media screen and (max-width: 431px) {
+  .suggest_shoe .suggest_bottom {
+    grid-template-columns: repeat(1, 1fr);
+  }
+}
+
+@media screen and (max-width: 431px) {
+  .deal_shoe .deal_link {
+    gap: 2px;
+    padding: 10px;
+  }
+}
+
+@media screen and (max-width: 431px) {
+  .pick_shoe .pick_link {
+    gap: 15px;
+  }
+}
+@media screen and (max-width: 431px) {
+  .pick_shoe .pick_link .picktext_link {
+    font-size: 20px;
+  }
 }/*# sourceMappingURL=style.css.map */
